# cargo-set-rust-version

./: Cargo.toml  Makefile  README.md
src/: main.rs
tests/: empty.rs  nothing_to_do.rs  preserve_comments.rs  update.rs  workspace.rs  workspace_with_dot.rs
