[package]
name = "cargo-set-rust-version"
description = "Update a Cargo.toml rust-version to latest."
homepage = "https://github.com/leighmcculloch/cargo-set-rust-version"
repository = "https://github.com/leighmcculloch/cargo-set-rust-version"
authors = ["Leigh McCulloch"]
version = "0.0.1"
edition = "2021"
rust-version = "1.62"

[dependencies]
clap = { version = "3.2.16", features = ["derive", "env"] }
thiserror = "1.0.32"
toml = "0.5.9"
toml_edit = "0.14.4"
reqwest = { version = "0.11.11", features = ["blocking"] }

[dev_dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
